--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@
 # Name of your site (displayed in the header)
 name: The Poppy Workshop
 
+remote_theme: "mmistakes/minimal-mistakes@4.15.1"
+
 # Short bio or description (displayed in the header)
 description: Information management to improve decision-making in crises & complex events 
 
