--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
+  - title: "Présentations"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
+  - title: "Ateliers"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
+  - title: "Open source"
   #   url: /year-archive/
-  # - title: "Sample Collections"
+  - title: "Documents"
   #   url: /collection-archive/
-  # - title: "Sitemap"
+  - title: Initiatives"
   #   url: /sitemap/
