--- a/_config.yml
+++ b/_config.yml
@@ -130,10 +130,7 @@ author:
     - label: "Youtube"
       icon: "fab fa-fw fa-youtube"
       url: "https://www.youtube.com/channel/UCybGJchrpkZO12J5Fumdudw"
-    - label: "Présentations & documents"
-      url: /presas/
-    - label: "Open source & Initiatives"
-      url: /open_source/
+    
 
 
 # Site Footer
@@ -298,6 +295,8 @@ defaults:
       comments: # true
       share: true
       related: true
+      sidebar:
+        nav: "side"
 
 footer_scripts:
   - assets/js/main.min.js
