--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,9 @@
 # main links
 main:
-  - title: "Events"
-    url: /events_upcoming/
   - title: "Produits"
-    url: /workshops/
+    url: "https://www.my-poppy.eu"
   - title: Blog
+    url: /_posts/
   - title: "Ateliers"
     url: /workshops/
 
@@ -15,4 +14,7 @@ sideb:
       url: /presas/
     - title: "Open source & Initiatives"
       url: /open_source/
+    - title: "Upcoming events in crisis management"
+      url: /events_upcoming/
+
   
