--- a/_config.yml
+++ b/_config.yml
@@ -297,6 +297,16 @@ defaults:
       related: true
       sidebar:
         nav: "sideb"
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      related: true
+      sidebar:
+        nav: "sideb"
 
 footer_scripts:
   - assets/js/main.min.js
