--- a/_config.yml
+++ b/_config.yml
@@ -109,12 +109,12 @@ author:
   name             : "The Poppy workshop"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "<i>We help you to to improve decision-making in crises & complex events, by leveraging the power of information. We are located in Brussels at the heart of Europe</i>"
-  location         : 
+  location         : "<a href='mailto:info@my-poppy.eu'><i class='fa fa-fw fa-envelope-square'></i></a>"
   email            : "info@my-poppy.eu"
   links:
     - label: "Email"
-      icon: "fa fa-fw fa-envelope-square"
-      url: mailto:info@my-poppy.eu
+      icon: ""
+      url: 
     - label: ""
       icon: "fa fa-fw fa-link"
       url: "https://www.my-poppy.eu"
