--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,11 @@ author:
   name             : "The Poppy workshop"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "<i>We help you to to improve decision-making in crises & complex events, by leveraging the power of information. We are located in Brussels at the heart of Europe</i>"
-  location         : "<a style='display:inherit' href='mailto:info@my-poppy.eu'><i class='fa fa-envelope-square'></i></a>&nbsp;<a style='display:inherit' href='https://twitter.com/mypoppy_eu'><i class='fa fa-twitter-square'></i></a>&nbsp;<a style='display:inherit' href='https://facebook.com/mypoppyeu'><i class='fa fa-facebook-square'></i></a>"
+  location         : "<a style='display:inherit' href='mailto:info@my-poppy.eu'><i class='fa fa-envelope-square'></i></a>&nbsp;
+<a style='display:inherit' href='https://twitter.com/mypoppy_eu'><i class='fa fa-twitter-square'></i></a>&nbsp;
+<a style='display:inherit' href='https://facebook.com/mypoppyeu'><i class='fa fa-facebook-square'></i></a>&nbsp;
+<a style='display:inherit' href='https://github.com/ccloquet'><i class='fa fa-github-square'></i></a>&nbsp;
+<a style='display:inherit' href='https://www.youtube.com/channel/UCybGJchrpkZO12J5Fumdudw'><i class='fa fa-youtube-square'></i></a>"
   email            : "info@my-poppy.eu"
   links:
     - label: "Email"
@@ -123,13 +127,13 @@ author:
       url: ""
     - label: "Facebook"
       icon: "fa fa-fw fa-facebook-square"
-      url: "https://facebook.com/mypoppyeu"
+      url: ""
     - label: "GitHub"
       icon: "fa fa-fw fa-github"
-      url: "https://github.com/ccloquet"
+      url: ""
     - label: "Youtube"
       icon: "fa fa-fw fa-youtube"
-      url: "https://www.youtube.com/channel/UCybGJchrpkZO12J5Fumdudw"
+      url: ""
     
 
 
