--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
 			<a style='display:inherit' href='https://facebook.com/mypoppyeu'><i style='color:#eaeaea!important' class='fa fa-facebook-square'></i></a>&nbsp;
 			<a style='display:inherit' href='https://github.com/ccloquet'><i style='color:#eaeaea!important' class='fa fa-github-square'></i></a>&nbsp;
 			<a style='display:inherit' href='https://www.youtube.com/channel/UCybGJchrpkZO12J5Fumdudw'><i style='color:#eaeaea!important' class='fa fa-youtube-square'></i></a>"
-  email            : ""
+  #email            : ""
   links:
     - label: "Contact"
       icon: "fa fa-fw fa-envelope-square"
