--- a/_config.yml
+++ b/_config.yml
@@ -109,10 +109,10 @@ author:
   name             : "The Poppy workshop"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "<i>We help you to to improve decision-making in crises & complex events, by leveraging the power of information. We are located in Brussels, at the heart of Europe</i>"
-  location         : "  <a style='display:inherit' href='https://twitter.com/mypoppy_eu'><i style='color:#eaeaea!important' class='fa fa-twitter-square'></i></a>&nbsp;
-			<a style='display:inherit' href='https://facebook.com/mypoppyeu'><i style='color:#eaeaea!important' class='fa fa-facebook-square'></i></a>&nbsp;
-			<a style='display:inherit' href='https://github.com/ccloquet'><i style='color:#eaeaea!important' class='fa fa-github-square'></i></a>&nbsp;
-			<a style='display:inherit' href='https://www.youtube.com/channel/UCybGJchrpkZO12J5Fumdudw'><i style='color:#eaeaea!important' class='fa fa-youtube-square'></i></a>"
+  location         : "  <a style='display:inherit' href='https://twitter.com/mypoppy_eu'><i style='color:#eaeaea!important' class='fa fa-fw fa-twitter-square'></i></a>&nbsp;
+			<a style='display:inherit' href='https://facebook.com/mypoppyeu'><i style='color:#eaeaea!important' class='fa fa-fw fa-facebook-square'></i></a>&nbsp;
+			<a style='display:inherit' href='https://github.com/ccloquet'><i style='color:#eaeaea!important' class='fa fa-fw fa-github-square'></i></a>&nbsp;
+			<a style='display:inherit' href='https://www.youtube.com/channel/UCybGJchrpkZO12J5Fumdudw'><i style='color:#eaeaea!important' class='fa fa-fw fa-youtube-square'></i></a>"
   #email            : ""
   links:
     - label: "Contact"
