--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "The Poppy workshop"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "<i>We help you to to improve decision-making in crises & complex events, by leveraging the power of information. We are located in Brussels, at the heart of Europe</i>"
+  bio              : "<i>We help you saving lives & goods in crises & complex events by simplifying the information fluxes. We are located in Brussels, at the heart of Europe</i>"
   location         : "  <a style='display:inherit' href='https://twitter.com/mypoppy_eu'><i style='color:#eaeaea!important' class='fa fa-fw fa-twitter-square'></i></a>&nbsp;
 			<a style='display:inherit' href='https://facebook.com/mypoppyeu'><i style='color:#eaeaea!important' class='fa fa-fw fa-facebook-square'></i></a>&nbsp;
 			<a style='display:inherit' href='https://github.com/ccloquet'><i style='color:#eaeaea!important' class='fa fa-fw fa-github-square'></i></a>&nbsp;
