--- a/_config.yml
+++ b/_config.yml
@@ -119,7 +119,7 @@ author:
       icon: "fa fa-fw fa-info"
       #url: "https://blog.my-poppy.eu/why"
       url: "https://www.my-poppy.eu"
-    - label: "Solutions: what do we do?"
+    - label: "Products & services"
       icon: "fa fa-fw fa-link"
       #url: "https://blog.my-poppy.eu/what"
       url: "https://www.my-poppy.eu"
