--- a/_config.yml
+++ b/_config.yml
@@ -115,14 +115,17 @@ author:
 			<a style='display:inherit' href='https://www.youtube.com/channel/UCybGJchrpkZO12J5Fumdudw'><i style='color:#eaeaea!important' class='fa fa-fw fa-youtube-square'></i></a>"
   #email            : ""
   links:
-    - label: "About us: why are we here?"
+    - label: "About us"
       icon: "fa fa-fw fa-info"
-      #url: "https://blog.my-poppy.eu/why"
+      #url: "https://blog.my-poppy.eu/about_us"
       url: "https://www.my-poppy.eu"
     - label: "Products & services"
       icon: "fa fa-fw fa-link"
       #url: "https://blog.my-poppy.eu/what"
       url: "https://www.my-poppy.eu"
+    - label: "Our customers"
+      icon: "fa fa-fw fa-info"
+      url: "https://blog.my-poppy.eu/customers"
     - label: "Contact"
       icon: "fa fa-fw fa-envelope-square"
       url: "mailto:info@my-poppy.eu"
