--- a/_config.yml
+++ b/_config.yml
@@ -288,6 +288,11 @@ defaults:
     values:
       header:
         overlay_image: /images/event.jpg
+        overlay_filter: 0.9 # same as adding an opacity of 0.5 to a black background
+        caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
+        actions:
+          - label: "More Info"
+            url: "https://unsplash.com"
       layout: single
       author_profile: true
       read_time: true
