--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 # Site Author
 author:
   name             : "Poppy"
-  avatar           : "/images/logo_poppy.png"
+  avatar           : "/images/logo_poppy_square.png"
   bio              : "<i>We help you saving lives & goods in crises & complex events by simplifying the information fluxes. We are located in Brussels, at the heart of Europe</i>"
   location         : "  <a style='display:inherit' href='https://twitter.com/mypoppy_eu'><i style='color:#eaeaea!important' class='fa fa-fw fa-twitter-square'></i></a>&nbsp;
 			<a style='display:inherit' href='https://facebook.com/mypoppyeu'><i style='color:#eaeaea!important' class='fa fa-fw fa-facebook-square'></i></a>&nbsp;
