--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 author:
   name             : "We are Poppy"
   #avatar           : "/images/logo_poppy_square.png?a=1"
-  bio              : "<i>We assist you and your organisation in saving lives thanks to a better match between humans and technology. We are resilience-focused, with a touch of Belgian pragmatism. That's why we are located in Brussels, at the heart of Europe</i>"
+  bio              : "<i>We help you to save lives thanks to a better match between humans and technology. We are resilience-focused, with a touch of Belgian pragmatism. That's why we are located in Brussels, at the heart of Europe</i>"
   location         : "  <a style='display:inherit' href='https://twitter.com/mypoppy_eu'><i style='color:#eaeaea!important' class='fa fa-fw fa-twitter-square'></i></a>&nbsp;
 			<a style='display:inherit' href='https://facebook.com/mypoppyeu'><i style='color:#eaeaea!important' class='fa fa-fw fa-facebook-square'></i></a>&nbsp;
 			<a style='display:inherit' href='https://github.com/ccloquet'><i style='color:#eaeaea!important' class='fa fa-fw fa-github-square'></i></a>&nbsp;
